@startuml
'https://plantuml.com/class-diagram

abstract class Command
class RenameFile
class CreateFile
class ReadFile

Command <|-- RenameFile
Command <|-- CreateFile
Command <|-- ReadFile

abstract class Command{
    {abstract} execute()
    {abstract} undo()
}

class RenameFile {
    + execute()
    + undo()
}

class CreateFile{
    + execute()
    + undo()
}

class ReadFile{
    + execute()
    + undo()
}


@enduml